Tabellen in denen es um Geld geht überarbeitet

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -13,42 +13,46 @@ Zahnriemens zu den Schwungrädern übertragen. Da die Schwungräder gegenläufig
 Zahnriemen umgelenkt werden. Deshalb sind auch noch zusätzliche Achsen und Räder nötig, welche das
 Gewicht erhöhen. Aufgrund des hohen Drehmomentes und des geringen Gewichtes bei mittelmässigen Kosten,
 ist die Variante B die bevorzugte Lösung für den Antriebsstrang. Ob sich diese bewährt, kann nur mit
-praktischen Tests ermittelt werden.
-    \begin{longtable}{p{0.5cm}p{0.8cm}lp{3cm}rr}
-        \textbf{Variante}& & \textbf{Stück} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
-          &       &                 &                      &          &  \\
-        \multirow{6}[2]{*}{A}
-          & 1x    & Motor           & $0.126 Nm$           & 34.95CHF & $57.0 g$ \\
-          & 2x    & Zahnrad Z22     & $0.126 Nm / 0.33 Nm$ &  9.62CHF & $5.1 g$  \\
-          & 2x    & Zahnrad Z90     & $0.257 Nm / 4.03 Nm$ &  3.44CHF & $57.0 g$ \\
-          & 2x    & zusätzl. Achsen & -                    &  0.00CHF & $10.0 g$ \\
-          & 4x    & Kugellager      & -                    &  1.76CHF & $9.8 g$  \\
-          & \textbf{Tot.} &  & \textbf{0.257Nm} & \textbf{64.59CHF} & \textbf{215.9g} \\
-          &       &                 &                      &          &  \\
-          \newpage
-          \textbf{Variante}& & \textbf{Stück} & \textbf{vorh. / zul. Momente (Nutzen)} & \textbf{Preis} & \textbf{Gewicht} \\\hline
-          &       &                 &                      &          &  \\
-        \multirow{8}[2]{*}{B}
-          & 2x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
-          & 2x    & Zahnrad Z15     & $0.1256 Nm / 0.15 Nm$& 2.88CHF  & $2.5 g$  \\
-          & 2x    & Zahnrad Z30     & $0.257 Nm / 0.68 Nm$ & 4.05CHF  & $9.4 g$  \\
-          & 2x    & Zahnrad Z15     & $0.257 Nm / 0.27 Nm$ & 3.44CHF  & $3.8 g$  \\
-          & 2x    & Zahnrad Z30     & $0.514 Nm / 1.24 Nm$ & 5.50CHF  & $15.0 g$ \\
-          & 4x    & Kugellager      & -                    & 1.76CHF  & $4.9 g$  \\
-          & 2x    & zusätzl. Achsen &                      & 0.00CHF  & $10.0 g$ \\
-          & 2x    & Motorenaufnahme &                      & 0.00CHF  & $8.0 g$  \\
-          & \textbf{Tot.} &       & \textbf{0.514Nm} & \textbf{108.68CHF} & \textbf{201.2g} \\
-          &       &                 &                      &          &  \\
-        \multirow{8}[2]{*}{C} 
-          & 1x    & Motor           & $0.1256 Nm$          & 34.95CHF & $57.0 g$ \\
-          & 1x    & Zahnrad         & $0.1256 Nm / 0.11 Nm$& 8.02CHF  & $10.0 g$ \\
-          & 1x    & Zahnrad         & $0.257 Nm / 0.96 Nm$ & 15.67CHF & $102.0 g$ \\
-          & 4x    & Riemenrad       & $0.257 Nm$           & 8.31CHF  & $21.0 g$ \\
-          & 1x    & Riemen          & $42.83 N /Fzul 300 N $ & 41.00CHF & $10.0 g$ \\
-          & 4x    & Kugellager      &                      & 1.76CHF  & $4.9 g$ \\
-          & 3x    & Achse           &                      & 0.00CHF  & $10 g$ \\
-          & \textbf{Tot.} &       & \textbf{0.257Nm} & \textbf{139.92CHF} & \textbf{312.6g} \\
-          &       &                 &                      &          &  \\
-      \caption{Nutzen-Kostentabelle}       
-      \label{tab:addlabel}
-    \end{longtable}
+praktischen Tests ermittelt werden. 
+\begin{longtable}{p{0.5cm}p{0.8cm}lp{3cm}p{0.5cm}rr} 
+    \textbf{Variante}& & \textbf{Stück} & \multicolumn{2}{p{3.7cm}}{\textbf{vorh. / zul. Momente}} &
+    \textbf{Preis} & \textbf{Gewicht} \\
+    & & & \multicolumn{2}{p{3.7cm}}{\textbf{(Nutzen)}} & \textbf{[CHF]} & \textbf{[g]} \\\hline
+      &       &                 &                      & &          &  \\
+    \multirow{6}[2]{*}{A}
+      & 1x    & Motor           & $0.126 Nm$           & & 34.95  & $57.0$ \\
+      & 2x    & Zahnrad Z22     & $0.126 Nm~/~0.33 Nm$ & &  9.62  & $5.1$  \\
+      & 2x    & Zahnrad Z90     & $0.257 Nm~/~4.03 Nm$ & &  3.44  & $57.0$ \\
+      & 2x    & zusätzl. Achsen & {---}                & & {---}  & $10.0$ \\
+      & 4x    & Kugellager      & {---}                & &  1.76  & $9.8$  \\
+      &  &  \textbf{Max. Drehmoment} & \textbf{0.257Nm} & \textbf{Tot.}& \textbf{64.59} & \textbf{215.9} \\
+      &       &                 &                      & &          &  \\
+      \newpage
+      \textbf{Variante}& & \textbf{Stück} & \multicolumn{2}{p{3.7cm}}{\textbf{vorh. / zul. Momente}} &
+      \textbf{Preis} & \textbf{Gewicht} \\
+      & & & \multicolumn{2}{p{3.7cm}}{\textbf{(Nutzen)}} & \textbf{[CHF]} & \textbf{[g]} \\\hline
+        &       &                 &                      & &          &  \\
+    \multirow{8}[2]{*}{B}
+      & 2x    & Motor           & $0.1256 Nm$          & & 34.95  & $57.0$ \\
+      & 2x    & Zahnrad Z15     & $0.1256 Nm~/~0.15 Nm$& & 2.88   & $2.5$  \\
+      & 2x    & Zahnrad Z30     & $0.257 Nm~/~0.68 Nm$ & & 4.05   & $9.4$  \\
+      & 2x    & Zahnrad Z15     & $0.257 Nm~/~0.27 Nm$ & & 3.44   & $3.8$  \\
+      & 2x    & Zahnrad Z30     & $0.514 Nm~/~1.24 Nm$ & & 5.50   & $15.0$ \\
+      & 4x    & Kugellager      & {---}                & & 1.76   & $4.9$  \\
+      & 2x    & zusätzl. Achsen & {---}                & & {---}  & $10.0$ \\
+      & 2x    & Motorenaufnahme & {---}                & & {---}  & $8.0$  \\
+      & &\textbf{Max. Drehmoment} & \textbf{0.514Nm}   &\textbf{Tot.} & \textbf{108.68} & \textbf{201.2} \\
+      &       &                 &                      & &          &  \\
+    \multirow{8}[2]{*}{C} 
+      & 1x    & Motor           & $0.1256 Nm$          & & 34.95  & $57.0$ \\
+      & 1x    & Zahnrad         & $0.1256 Nm~/~0.11 Nm$& & 8.02   & $10.0$ \\
+      & 1x    & Zahnrad         & $0.257 Nm~/~0.96 Nm$ & & 15.67  & $102.0$ \\
+      & 4x    & Riemenrad       & $0.257 Nm$           & & 8.31   & $21.0$ \\
+      & 1x    & Riemen          & $42.83 N~/~300 N$    & & 41.00  & $10.0$ \\
+      & 4x    & Kugellager      & {---}                & & 1.76   & $4.9$ \\
+      & 3x    & Achse           & {---}                & & {---}  & $10$ \\
+      & & \textbf{Max. Drehmoment} & \textbf{0.257Nm} & \textbf{Tot.} & \textbf{139.92} & \textbf{312.6} \\
+      &       &                 &                     &  &          &  \\
+  \caption{Nutzen-Kostentabelle}       
+  \label{tab:addlabel}
+\end{longtable}
