--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -1,55 +1,54 @@
 \subsection{Budget}
-	Im PREN2 steht dem Team ein Budget von Fr. 600.- zur Verfügung. Damit 
-	dieses eingehalten werden kann, wurden die voraussichtlichen 
-	Beschaffungskosten in der Tabelle \ref{tab:Kostentabelle} aufgelistet. 
-	Standardisierte Rohmaterialen wie Rundteile, Profile, Widerstände und 
-	dergleichen, stehen an der Hochschule Luzern kostenlos zur Verfügung.
-	%
+    Im PREN2 steht dem Team ein Budget von Fr. 600.- zur Verfügung. Damit 
+    dieses eingehalten werden kann, wurden die voraussichtlichen 
+    Beschaffungskosten in der Tabelle \ref{tab:Kostentabelle} aufgelistet. 
+    Standardisierte Rohmaterialen wie Rundteile, Profile, Widerstände und 
+    dergleichen, stehen an der Hochschule Luzern kostenlos zur Verfügung.
+    %
 %\begin{table}[h!]
-%	\centering
-    \begin{longtable}{p{1.7cm}rllcc}
+%    \centering
+    \begin{longtable}{p{1.7cm}rlrr}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
-    & \textbf{Total} \\
-    \hline     &       &                              &            &            \\
-    Zuführung: & 1     & Flachbandriemen              &  Fr. 50.00 &  Fr. 50.00 \\
-               & 1     & Achse          	          &  Fr. -     &  Fr. -     \\
-               & 1     & Welle                     	  &  Fr. -     &  Fr. -     \\
-               & 1     & Zahnrad         	          &  Fr. 8.00  &  Fr. 8.00  \\
-               & 1     & Zahnrad         	          &  Fr. 8.00  &  Fr. 8.00  \\
-               & 1     & DC-Motor        	          &  Fr. 20.00 &  Fr. 20.00 \\
-               &       &                 	          &            &            \\
-       Gerüst: & 2     & Seitenplatte    	          &  Fr. 15.00 &  Fr. 30.00 \\
-               & 4     & Stützstangen    	          &  Fr. -     &  Fr. -     \\
-               & 2     & Bodenplättchen  	          &  Fr. -     &  Fr. -     \\
-               & 1     & Hardware (Controller)        &  Fr. 50.00 &  Fr. 50.00 \\
-               & 1     & Hardwarekomponenten          &  Fr. 40.00 &  Fr. 40.00 \\
-               &       &       				          &      	   &            \\
+    & \textbf{Total} \\ & & & \textbf{[CHF]} & \textbf{[CHF]} \\       
+    \hline     &       &                              &        &        \\
+    Zuführung: & 1     & Flachbandriemen              &  50.00 &  50.00 \\
+               & 1     & Achse                        &  {---} &  {---} \\
+               & 1     & Welle                        &  {---} &  {---} \\
+               & 1     & Zahnrad                      &   8.00 &   8.00 \\
+               & 1     & Zahnrad                      &   8.00 &   8.00 \\
+               & 1     & DC-Motor                     &  20.00 &  20.00 \\
+               &       &                              &        &        \\
+       Gerüst: & 2     & Seitenplatte                 &  15.00 &  30.00 \\
+               & 4     & Stützstangen                 &  {---} &  {---} \\
+               & 2     & Bodenplättchen               &  {---} &  {---} \\
+               & 1     & Hardware (Controller)        &  50.00 &  50.00 \\
+               & 1     & Hardwarekomponenten          &  40.00 &  40.00 \\
+               &       &                              &        &        \\
    \multirow{2}{1.7cm}{Antrieb Schwungräder:}  
-               & 2     & Zahnrad Z15                  &  Fr. 2.88  &  Fr. 5.76  \\
-               & 2     & Zahnrad Z30 	              &  Fr. 4.05  &  Fr. 8.10  \\
-               & 2     & Zahnrad Z15 	        	  &  Fr. 3.44  &  Fr. 6.88  \\
-               & 2     & Zahnrad Z30 	         	  &  Fr. 5.50  &  Fr. 11.00 \\
-               & 2     & Welle (Zahnrad - Motor)      &  Fr. -     &  Fr. -     \\
-               & 2     & Welle (Zahnrad - Zahnrad)    &  Fr. -     &  Fr. -     \\
-               & 2     & Welle (Zahnrad - Schwungrad) &  Fr. -     &  Fr. -     \\
-               & 4     & Kugellager                   &  Fr. 1.76  &  Fr. 7.04  \\
-               & 1     & Schaumstoffband 1m           &  Fr. 20.00 &  Fr. 20.00 \\
-               & 2     & Schwungrad                   &  Fr. 20.00 &  Fr. 40.00 \\
-               & 2     & Brushlessmotor               &  Fr. 34.95 &  Fr. 69.90 \\
-               &       &                              &            &            \\
-    \newpage
+               & 2     & Zahnrad Z15                  &   2.88 &   5.76 \\
+               & 2     & Zahnrad Z30                  &   4.05 &   8.10 \\
+               & 2     & Zahnrad Z15                  &   3.44 &   6.88 \\
+               & 2     & Zahnrad Z30                  &   5.50 &  11.00 \\
+               & 2     & Welle (Zahnrad - Motor)      &  {---} &  {---} \\
+               & 2     & Welle (Zahnrad - Zahnrad)    &  {---} &  {---} \\
+               & 2     & Welle (Zahnrad - Schwungrad) &  {---} &  {---} \\
+               & 4     & Kugellager                   &   1.76 &   7.04 \\
+               & 1     & Schaumstoffband 1m           &  20.00 &  20.00 \\
+               & 2     & Schwungrad                   &  20.00 &  40.00 \\
+               & 2     & Brushlessmotor               &  34.95 &  69.90 \\
+    \newpage    
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
-    & \textbf{Total} \\
-    \hline     &       &                              &            &            \\
+    & \textbf{Total} \\ & & & \textbf{[CHF]} & \textbf{[CHF]} \\ 
+    \hline     &       &                              &        &        \\
     \multirow{2}{1.7cm}{Dreh-mechanismus:} 
-               & 1     & Zahnscheibe (Plexiglas)      &  Fr. 10.00 &  Fr. 10.00 \\
-               & 1     & Zahnrad (Plexiglas)          &  Fr. 10.00 &  Fr. 10.00 \\
-               & 1     & Servomotor                   &  Fr. 25.00 &  Fr. 25.00 \\
-               & 1     & Bolzen                       &  Fr. -     &  Fr. -     \\
-               & 1     & Gleitlager                   &  Fr. 5.00  &  Fr. 5.00  \\
-               & 1     & Aufnahmeplatte               &  Fr. -     &  Fr. -     \\
-               & 1     & Welle                        &  Fr. -     &  Fr. -     \\
-               &       & \textbf{Total:} & \textbf{} & \textbf{ Fr. 424.68 }    \\
+               & 1     & Zahnscheibe (Plexiglas)      &  10.00 &  10.00 \\
+               & 1     & Zahnrad (Plexiglas)          &  10.00 &  10.00 \\
+               & 1     & Servomotor                   &  25.00 &  25.00 \\
+               & 1     & Bolzen                       &  {---} &  {---} \\
+               & 1     & Gleitlager                   &   5.00 &   5.00 \\
+               & 1     & Aufnahmeplatte               &  {---} &  {---} \\
+               & 1     & Welle                        &  {---} &  {---} \\
+               &       & \textbf{Total:} &            & \textbf{424.68} \\
        \caption{Budgettabelle}
        \label{tab:Kostentabelle}
     \end{longtable}
