--- a/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Ausblick.tex
@@ -2,7 +2,7 @@
 Im nächsten Semester wird das erarbeitete Konzept realisiert. Aus administrativer 
 Sicht muss vermehrt und besser zu Beginn einer jeden Meilensteinphase abgesprochen 
 werden, welche Dokumente mit welchem spezifischen Inhalt erstellt werden müssen. 
-Während dem PREN1-Modul musste jedes Mal vor einem Meilenstein ein Grosszahl der 
+Während dem PREN 1 Modul musste jedes Mal vor einem Meilenstein ein Grosszahl der 
 Dokumente überarbeitet oder gar neu erstellt werden, weil sich zeigte, dass der 
 Inhalt nicht dem Geforderten entsprach.\\
 \\
@@ -17,7 +17,7 @@ Objekterkennung und der Kommunikation zwischen Controller und Smartphone
 durchgeführt. Diese einzelnen Komponenten müssen jedoch in einer homogenen 
 Smartphone-App integriert werden. Zu Test- und Demonstrationszwecken soll ausserdem 
 der DesktopViewer weiter ausgebaut werden, um Feinabstimmungen über eine 
-GUI\footnote{\textbf{G}raphical  \textbf{U}ser \textbf{I}nterface}-Applikation zu 
+GUI\footnote{\textbf{G}raphical \textbf{U}ser \textbf{I}nterface}-Applikation zu 
 ermöglichen.\\
 \\
 Ungewissheit besteht ebenfalls betreffend der Mitarbeit von Manuel Güdel. Da er 
