--- a/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
+++ b/Dokumentation/Enddokumentation/Schluss/Rueckblick.tex
@@ -1,5 +1,5 @@
 \subsection{Rückblick}
-Eine wichtige Erkenntnis wurde im PREN1-Modul bezüglich kollaboratives Arbeiten 
+Eine wichtige Erkenntnis wurde im PREN 1 Modul bezüglich kollaboratives Arbeiten 
 gewonnen. Der Austausch aller Dateien fand via Dropbox statt. Dieses Modell zeigte 
 jedoch mit der Zeit Schwächen, vor allem bezüglich des gemeinsamen editierens eines 
 Dokuments. Es wäre daher eine Diskussion wert, die Dokumente welche von mehreren 
