Typo beim ET-Zeugs

--- a/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
+++ b/Dokumentation/Enddokumentation/ET_Gruppe/BLDC/Ansteuerung.tex
@@ -37,8 +37,8 @@
         erreicht sein Maximum bei einem Polradwinkel von 90$^\circ$. Die 
         Kommutierung wird entweder als Sinuskommutierung oder als 
         Blockkommutierung ausgeführt. Die Sinuskommutierung bildet die 
-        Sinusform eines dreiphasigen Netzes nach. Die Sinusform kann mit einem 
-        Rechtecksignal angenähert werden. Dabei spricht man von einer 
+        Sinusform eines dreiphasigen Netzes nach. Die Sinusform kann auch mit 
+        einem Rechtecksignal angenähert werden. Dabei spricht man von einer 
         Blockkommutierung. Diese ist einfacher zu realisieren, aber erreicht 
         nicht das selbe Drehmoment wie eine Sinuskommutierung. In diesem 
         Projekt wird aufgrund der einfacheren Implementierung eine 
@@ -53,7 +53,7 @@
         \end{figure}
     \fi
         \\
-        Es gibt hauptsächlich drei Methoden das Drehfeld zu generieren und zu 
+        Es gibt hauptsächlich drei Methoden, das Drehfeld zu generieren und zu 
         regeln. Die einfachste Methode ist die Zwangskommutierung: 
         Dabei wird ein Drehfeld erzeugt und dem Motor aufgezwungen. Der Läufer 
         muss dem Drehfeld folgen, der maximal zulässige Winkel von 90$^\circ$
@@ -145,7 +145,7 @@
         \newpage
         \parindent 0pt Die Tabelle in Abbildung 
         \ref{abb:WahrheitstabelleAnsteuerung} kann pro Signal zu folgenden 
-        logischen Verknüpfung vereinfacht werden\\
+        logischen Verknüpfung vereinfacht werden. \\
         \\
     \ifSTANDALONE
         \begin{table}
