--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Risikoanalyse.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Risikoanalyse.tex
@@ -5,28 +5,23 @@ initialisiert, in einer Tabelle aufgelistet und bewertet. \\
 Die nachfolgenden Risiken werden als erheblich (Farbcode rot) eingestuft und müssen für die Realisierung des Produkts beachtet werden. 
 Die komplette Risikoliste ist im Anhangsdokument zu finden.
 
- \begin{longtable}{p{5cm}l ll m{4cm}}
+ \begin{longtable}{p{4cm}l l p{5.5cm}}
  	\textbf{Risiko} & \textbf{Auswirkungs-} & \textbf{Wahrschein-} & \textbf{Massnahmen} \\
  	                & \textbf{grad}         & \textbf{lichkeit}    & \\
  	     
  	\hline     &       &                              &             \\
-	Zeitdruck lässt Realisierung des ursprüngliches Konzept nicht mehr zu &  Kritisch & Wahrscheinlich & \multirow{1}{5cm}{-Auf wichtigste Elemente des Prototyps konzentrieren und eine, falls möglich, vereinfachte Version bauen.} \\
+	Zeitdruck lässt Realisierung des ursprüngliches Konzept nicht mehr zu &  Kritisch & Wahrscheinlich & -Auf wichtigste Elemente des Prototyps konzentrieren und eine, falls möglich, vereinfachte Version bauen. \\
 	&&&\\
-	Wurfgenauigkeit entspricht nicht den Mindestanforderungen (innerhalb 20cm x 20cm) & Katastrophal & Wahrscheinlich &  \multirow{1}{5cm}{-sofort Team-Sitzung einberufen
-	-Massnahmen und Lösungen suchen/recherchieren evtl. mit Einbezug der Dozenten.}\\
-    &&&\\
-	Wenn die Bälle in die Schwungräder eintreten: Das Risiko ist eine zu hohe Abbremsung der Schwungräder. & Kritisch & Wahrscheinlich & \multirow{1}{5cm}{-Dimensionierung und Ansteuerung der Motoren entsprechend definieren.}\\
-	\newpage
-	\textbf{Risiko} & \textbf{Auswirkungs-} & \textbf{Wahrschein-} & \textbf{Massnahmen} \\
-	& \textbf{grad}         & \textbf{lichkeit}    & \\
-	
-	\hline     &       &                              &             \\
-	Gewicht der Gesamtkonstruktion ist nicht kleiner als 2kg. & Kritisch & Wahrscheinlich & \multirow{1}{5cm}{-Konstruktion und Wahl der einzelnen Teile explizit nach geringstmöglichem Gewicht wählen (gilt während des ganzen Projekts)}\\
+	Wurfgenauigkeit entspricht nicht den Mindestanforderungen (innerhalb 20cm x 20cm) & Katastrophal & Wahrscheinlich &  -sofort Team -Sitzung einberufen  -Massnahmen und Lösungen suchen/recherchieren evtl. mit Einbezug der Dozenten.\\
+    \newpage
+    \textbf{Risiko} & \textbf{Auswirkungs-} & \textbf{Wahrschein-} & \textbf{Massnahmen} \\
+				    & \textbf{grad}         & \textbf{lichkeit}    & \\	
+    \hline     &       &     &             \\ 
+	Wenn die Bälle in die Schwungräder eintreten: Das Risiko ist eine zu hohe Abbremsung der Schwungräder. & Kritisch & Wahrscheinlich & -Dimensionierung und Ansteuerung der Motoren entsprechend definieren.\\
+    &&&\\                 
+	Gewicht der Gesamtkonstruktion ist nicht kleiner als 2kg. & Kritisch & Wahrscheinlich & -Konstruktion und Wahl der einzelnen Teile explizit nach geringstmöglichem Gewicht wählen (gilt während des ganzen Projekts)\\
 	&&&\\
-	&&&\\
-	&&&\\
-	Korberkennung mit Android Device nicht möglich. & Kritisch & Wahrscheinlich & \multirow{1}{5cm}{-Korberkennung frühzeitig (Mitte PREN1) als eigenstehendes Modul erstellen und verifizieren-Schlechte Lichtverhältnisse respektive Schattenwurf (durch Baustrahler) miteinbeziehen}
-	\\
+	Korberkennung mit Android Device nicht möglich. & Kritisch & Wahrscheinlich & -Korberkennung frühzeitig (Mitte PREN1) als eigenstehendes Modul erstellen und verifizieren-Schlechte Lichtverhältnisse respektive Schattenwurf (durch Baustrahler) miteinbeziehen.\\
 	
 	 
  	
