Header der Tabellen angepasst

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Antriebsstrang.tex
@@ -18,7 +18,7 @@ praktischen Tests ermittelt werden.
     \textbf{Variante}& & \textbf{Stück} & \multicolumn{2}{p{3.7cm}}{\textbf{vorh. / zul. Momente}} &
     \textbf{Preis} & \textbf{Gewicht} \\
     & & & \multicolumn{2}{p{3.7cm}}{\textbf{(Nutzen)}} & \textbf{[CHF]} & \textbf{[g]} \\\hline
-      &       &                 &                      & &          &  \\
+      &       &                 &                      & &          &  \\\endhead
     \multirow{6}[2]{*}{A}
       & 1x    & Motor           & $0.126 Nm$           & & 34.95  & $57.0$ \\
       & 2x    & Zahnrad Z22     & $0.126 Nm~/~0.33 Nm$ & &  9.62  & $5.1$  \\
@@ -26,12 +26,7 @@ praktischen Tests ermittelt werden.
       & 2x    & zusätzl. Achsen & {---}                & & {---}  & $10.0$ \\
       & 4x    & Kugellager      & {---}                & &  1.76  & $9.8$  \\
       &  &  \textbf{Max. Drehmoment} & \textbf{0.257Nm} & \textbf{Tot.}& \textbf{64.59} & \textbf{215.9} \\
-      &       &                 &                      & &          &  \\
       \newpage
-      \textbf{Variante}& & \textbf{Stück} & \multicolumn{2}{p{3.7cm}}{\textbf{vorh. / zul. Momente}} &
-      \textbf{Preis} & \textbf{Gewicht} \\
-      & & & \multicolumn{2}{p{3.7cm}}{\textbf{(Nutzen)}} & \textbf{[CHF]} & \textbf{[g]} \\\hline
-        &       &                 &                      & &          &  \\
     \multirow{8}[2]{*}{B}
       & 2x    & Motor           & $0.1256 Nm$          & & 34.95  & $57.0$ \\
       & 2x    & Zahnrad Z15     & $0.1256 Nm~/~0.15 Nm$& & 2.88   & $2.5$  \\
