--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Kosten.tex
@@ -10,7 +10,7 @@
     \begin{longtable}{p{1.7cm}rlrr}
     \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
     & \textbf{Total} \\ & & & \textbf{[CHF]} & \textbf{[CHF]} \\       
-    \hline     &       &                              &        &        \\
+    \hline     &       &                              &        &        \\\endhead
     Zuführung: & 1     & Flachbandriemen              &  50.00 &  50.00 \\
                & 1     & Achse                        &  {---} &  {---} \\
                & 1     & Welle                        &  {---} &  {---} \\
@@ -36,11 +36,7 @@
                & 1     & Schaumstoffband 1m           &  20.00 &  20.00 \\
                & 2     & Schwungrad                   &  20.00 &  40.00 \\
                & 2     & Brushlessmotor               &  34.95 &  69.90 \\
-    \newpage    
-    \textbf{Kategorie} & \textbf{Stk} & \textbf{Bezeichnung} & \textbf{Stk-Preis}
-    & \textbf{Total} \\ & & & \textbf{[CHF]} & \textbf{[CHF]} \\ 
-    \hline     &       &                              &        &        \\
-    \multirow{2}{1.7cm}{Dreh-mechanismus:} 
+    \newpage
                & 1     & Zahnscheibe (Plexiglas)      &  10.00 &  10.00 \\
                & 1     & Zahnrad (Plexiglas)          &  10.00 &  10.00 \\
                & 1     & Servomotor                   &  25.00 &  25.00 \\
