--- a/Dokumentation/Enddokumentation/Projektplanung_Management/Risikoanalyse.tex
+++ b/Dokumentation/Enddokumentation/Projektplanung_Management/Risikoanalyse.tex
@@ -1,12 +1,12 @@
 \subsection{Risikoanalyse}
 Für ein erfolgreiches Gelingen des PREN-Projekts ist es notwendig, vorgängig die 
 Risiken des Produkts abzuschätzen, um mögliche Probleme frühzeitig zu erkennen 
-und zu umgehen. Erkennbare Risiken wurden im Team initialisiert, in einer Tabelle 
-aufgelistet und bewertet. Die nachfolgenden Risiken werden als erheblich 
-(Farbcode rot) eingestuft und müssen für die Realisierung des Produkts beachtet 
-werden. Die komplette Risikoliste ist im Anhangsdokument zu finden.
+und zu umgehen. Erkennbare Risiken wurden im Team festgehalten, in einer Tabelle 
+aufgelistet und bewertet. Die in Tabelle \ref{tab:RisikoanalyseTabelle} dargestellten Risiken sind nur die als erheblich 
+(Farbcode rot) eingestuften Risiken, diese müssen für die Realisierung des Produkts beachtet 
+werden. Die komplette Risikoliste ist im Anhangsdokument zu finden.\\
 %
- \begin{longtable}{p{4cm}l l p{5.5cm}}
+ \begin{longtable}{p{4cm} l l p{5.5cm}}
  	\textbf{Risiko} & \textbf{Auswirkung} & \textbf{Wahrschein-} & \textbf{Massnahmen} \\
  	                &                     & \textbf{lichkeit}    & \\	     
  	\hline & & & \\
@@ -30,8 +30,8 @@ werden. Die komplette Risikoliste ist im Anhangsdokument zu finden.
 	
 	\rule{0pt}{12pt}Korberkennung mit Android Device nicht möglich. & Kritisch & Wahrscheinlich &
 	 Korberkennung frühzeitig (Mitte PREN1) als eigenstehendes Modul erstellen und 
-	 verifizieren-Schlechte Lichtverhältnisse respektive Schattenwurf (durch Baustrahler) 
+	 verifizieren, sowie Schlechte Lichtverhältnisse respektive Schattenwurf (durch Baustrahler) 
 	 miteinbeziehen.\\
  	\caption{Risikoanalyse}
- 	\label{tab:RikisoanalyseTabelle}
+ 	\label{tab:RisikoanalyseTabelle}
  \end{longtable}
