--- a/Dokumentation/Enddokumentation/Einleitung.tex
+++ b/Dokumentation/Enddokumentation/Einleitung.tex
@@ -22,7 +22,7 @@ durch einen Dozenten festgelegt, und ist somit vor Start nicht bekannt. Die
 Übermittlung des Startsignals muss drahtlos erfolgen, nach Ausführen der Aufgabe, 
 muss entweder ein akustisches, oder ein optisches Endsignal ausgegeben werden.\\
 \\
-Das Ziel der Arbeit ist, die Aufgabenstellung erfolgreich in ein Produkt 
+Das Ziel der Arbeit ist, diese Aufgabenstellung erfolgreich in ein Produkt 
 umzusetzen. Dabei hat sich unser Team eigene Ziele gesetzt und gewichtet. 
 Diese sind:
 \begin{enumerate}
