Quellen-File verschoben

--- a/Dokumentation/Dokumentation.tex
+++ b/Dokumentation/Dokumentation.tex
@@ -107,7 +107,7 @@
         \nocite{*} %Alle Quellen ausgeben
         \renewcommand{\refname}{Literatur- und Quellenverzeichnis}
 %        \{\refname}{Quellenverzeichnis}
-        \bibliography{Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source,Quellen/Quellen}{} %!!! Kein Leerzeichen nach dem , !!!!
+        \bibliography{Enddokumentation/ET_Gruppe/common/ET-Gruppe_Source,Common/Quellen}{} %!!! Kein Leerzeichen nach dem , !!!!
     \end{flushleft}
     %
     % Beginn des Anhangs
