Korrekturen bis SmartphoneAlsMaster

--- a/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/Geraeteuebersicht.tex
@@ -32,7 +32,7 @@ alle Tennisbälle die gleiche Startenergie aufweisen. Dadurch ist eine gleichmä
 	\begin{threeparttable} 
 		\begin{tabular}{p{6mm}p{4.2cm}p{\textwidth-8cm}}
 		    \textbf{Pos}\tnote{*} & \textbf{Bezeichnung} & \textbf{Funktion} \\ 
-			\hline\rule{0pt}{11pt} 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehl, 
+			\hline\rule{0pt}{11pt} 1 & Startgerät (Computer) & Senden des Startbefehls, Empfangen des Endbefehls, 
 			Akustische und visuelle Signalausgabe \\ 
 			    \rule{0pt}{11pt}   2 & Master  (Smartphone) & Empfangen des Startbefehls, Senden des Endbefehls,
 			Fotografieren, Auswerten und Steuern des Controllers \\ 
