--- a/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
+++ b/Dokumentation/Enddokumentation/Varianten/VerschiedeneVarianten.tex
@@ -15,10 +15,9 @@ in  Abbildung \ref{fig:Funktionsskizze} ersichtlich ist.\\
 \end{figure}
 \\
 Nach der Ermittlung dieser Teilprobleme mussten für die einzelnen Bereiche nach Lösungsansätzen
-recherchiert werden. Die Resultate dieser Recherche, sowie die danach folgende Bewertung der
-gefundenen Lösungen ist aus Platzgründen im Anhangsdokument zu finden. Um die Ergebnisse der Bewertung
+recherchiert werden. Die Resultate dieser Recherche, wurden anschliessend einheitlich bewertet. Um die Ergebnisse der Bewertung
 sinnvoll als Entscheidungshilfe einsetzen zu können, wurden sie kompakt zu einem Grobkonzept
-zusammengefasst. (Siehe Anhangsdokument)\\
+zusammengefasst. Aus Platzgründen sind diese Inhalte im Anhangsdokument beigelegt.\\
 \\
 Jedes Teilproblem ist bezüglich den Vor- und Nachteilen nach den definierten Zielsetzungen
 bewertet worden. Dadurch lassen sich grafisch geeignete Kombinationsmöglichkeiten herleiten und
