Quellverweis überarbeitet (Korberkennung)

--- a/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
+++ b/Dokumentation/Enddokumentation/Loesungskonzept/SmartphoneAlsMaster.tex
@@ -38,7 +38,7 @@
 		hinaus, was das Resultat verfälschen könnte. Als zweiter Schritt wird 
 		über sämtliche Pixel des Bildes iteriert. Dabei wird für jedes Pixel die 
 		Helligkeit anhand einer vordefinierten Schwelle bestimmt, ob es zum 
-		Hintergrund (heller) oder zum Korb (dunkel) gehört. Zur Bestimmung der Helligkeit eines Pixels anhand eines RGB Wertes gibt es mehrere Möglichkeiten, welche sich in Genauigkeit und Performance unterscheiden. (\cite{S:RGB}) Ein genügend hoher 
+		Hintergrund (heller) oder zum Korb (dunkel) gehört. Zur Bestimmung der Helligkeit eines Pixels anhand eines RGB Wertes gibt es mehrere Möglichkeiten, welche sich in Genauigkeit und Performance unterscheiden. \cite{S:RGB} Ein genügend hoher 
 		Kontrast ist an dieser Stelle entscheidend. Vor allem Schattenwürfe durch 
 		seitliche Beleuchtung stellen ein Problem dar. Deshalb wurde diesbezüglich 
 		ein erster Test des entwickelten Prototypen mit zwei Scheinwerfern 
